--- a/index.html
+++ b/index.html
@@ -32,23 +32,24 @@
         </main>
 
         <div class="checkout">
-            <h1 class="title">Your Order</h1>
-            <div class="summary">
-                <div class="item-summary">
-                    <p class="order-item">First item<button class="remove-btn">Remove</button></p>
-                    <p class="order-item">Second item<button class="remove-btn">Remove</button></p>
-                    <p class="order-total">Total price: PRICE</p>
-                </div>
-                <div class="prices">
-                    <p class="item-price">$14</p>
-                    <p class="item-price">$14</p>
-    
-                </div>
-
+            <div class="title-container">
+                <h1>Your order</h1>
             </div>
-
-
-            <button class="purchase-btn">Complete order</button>
+            
+            <div class="item-container">
+                <p class="order-item">Item 1<button class="remove-btn">remove</button></p>
+                <p class="price">$20</p>
+            </div>
+            <div class="item-container">
+                <!-- when button is clicked, add hidden to classlist of parent element and adjust price accordingly -->
+                <p class="order-item">Item 1<button class="remove-btn">remove</button></p> 
+                <p class="price">$20</p>
+            </div>
+            <div class="total-container">
+                <p class="total-price-txt">Total price:</p>
+                <p class="total-price">$200</p>
+            </div>
+            <button class="complete-order-btn">Complete order</button>
         </div>
 
 
